--- a/sites/all/themes/ntb/scss/components/_nav.scss
+++ b/sites/all/themes/ntb/scss/components/_nav.scss
@@ -15,6 +15,13 @@
   background-color: $white;
   border: none;
 
+  .navbar-nav.inline {
+    @include inline-block();
+    display: inline-block;
+    width: 100%;
+    margin: auto;
+  }
+
   .navbar-nav > li > a {
     width: 100%;
     color: #37746e;
@@ -73,14 +80,14 @@
 @include breakpoint($screen-sm) {
   #navigation {
     display: block;
-
-    #main-menu {
-      @include inline-block;
-    }
   }
 
   .navbar-nav {
     float: none;
+  }
+
+  .navbar-default .navbar-nav.inline {
+    width: auto;
   }
 
   .navbar-default {
